--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-less": "^3.3.0",
     "gulp-rename": "^1.2.2",
+    "gulp-scss": "^1.4.0",
     "gulp-uglify": "^3.0.0"
   },
   "scripts": {
