--- a/app/package.json
+++ b/app/package.json
@@ -12,8 +12,9 @@
     "gulp-concat": "^2.6.1",
     "gulp-less": "^3.3.0",
     "gulp-rename": "^1.2.2",
-    "gulp-scss": "^1.4.0",
-    "gulp-uglify": "^3.0.0"
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
+    "pump": "^1.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
