--- a/app/bower.json
+++ b/app/bower.json
@@ -2,34 +2,33 @@
   "name": "DropboxAngularBootstrap",
   "private": true,
   "dependencies": {
-    "angular": "1.5.8",
-    "angular-bootstrap": "1.3.3",
-    "angular-ui-router": "^0.3.1",
-    "bootstrap": "^3.3.7",
-    "moment": "^2.14.1",
-    "angular-moment": "^0.10.3",
-    "loaders.css": "^0.1.2",
-    "angular-animate": "^1.5.8",
-    "angular-messages": "^1.5.8",
-    "angular-sanitize": "^1.5.8"
+    "angular": "1.6.4",
+    "angular-bootstrap": "2.5.0",
+    "angular-ui-router": "1.0.1",
+    "bootstrap": "v4.0.0-alpha.6",
+    "moment": "2.5.0",
+    "angular-moment": "1.0.1",
+    "loaders.css": "0.1.2",
+    "angular-animate": "1.6.4",
+    "angular-messages": "1.6.4",
+    "angular-sanitize": "1.6.4"
   },
   "resolutions": {
-    "angular": "1.5.8",
-    "moment": "^2.14.1"
+    "angular": ">=1.2.0 <1.7.0",
+    "moment": ">=2.8.0 <3.0.0"
   },
   "authors": [
     "Nick Davis <hire@nicholasdavis.co>"
   ],
   "description": "Code example: Dropbox app using AngularJs, Angular UI Boostrap, UI Router, and Bootstrap 4",
   "version": "0.0.0",
-  "homepage": "https://github.com/nicholas-davis/dropbox-angular-bootstrap#readme",
+  "homepage": "",
   "keywords": [
     "AngularJs",
     "Angular UI Bootstrap",
     "Bootstrap 4"
   ],
   "license": "MIT",
-  "homepage": "",
   "ignore": [
     "**/.*",
     "node_modules",
